--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,24 @@ header {
     width: 120px;
     height: 80px;
     margin-top: 1em;
-    background-color: aliceblue;
-    border: 3px solid black;
+    text-align: center;
 }
 
 #result-container > h3 {
     text-align: center;
     margin-top: 1em;
+}
+
+#player-score > div {
+    width: 100%;
+    height: 100%;
+    background-color: aliceblue;
+    border: 3px solid black;
+}
+
+#computer-score > div {
+    width: 100%;
+    height: 100%;
+    background-color: aliceblue;
+    border: 3px solid black;
 }
