--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
@@ -45,21 +46,22 @@ header {
     text-align: center;
 }
 
+#result-container {
+    margin-top: 2em;
+}
+
 #result-container > h3 {
     text-align: center;
     margin-top: 1em;
 }
 
-#player-score > div {
+#player-score-box > div, #computer-score-box > div {
     width: 100%;
     height: 100%;
     background-color: aliceblue;
     border: 3px solid black;
-}
-
-#computer-score > div {
-    width: 100%;
-    height: 100%;
-    background-color: aliceblue;
-    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
 }
