--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,13 @@ header {
     align-items: center;
     font-size: 40px;
 }
+
+#recent-score {
+    height: 2em;
+    /* border: 1px solid; */
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: bold;
+}
