--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,14 @@ header {
     font-style: italic;
     font-weight: bold;
 }
+
+#reset {
+    text-align: center;
+    margin: 20px auto;
+}
+
+#reset button {
+    padding: 5px 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
