--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #fcc603;
+    background-color: #5cdb95;
     padding: 2em;
     height: 100vh;
     min-width: 300px;
@@ -28,8 +28,9 @@ header {
 }
 
 .weapon {
-    width: 100px;
+    width: 130px;
     height: 50px;
+    border-radius: 30px;
     cursor: pointer;
 }
 
@@ -40,8 +41,8 @@ header {
 }
 
 #scores-container > div {
-    width: 120px;
-    height: 80px;
+    width: 200px;
+    height: 150px;
     margin-top: 1em;
     text-align: center;
 }
@@ -85,4 +86,9 @@ header {
     padding: 5px 20px;
     font-size: 20px;
     cursor: pointer;
+}
+
+#player-image, #computer-image {
+    width: 100%;
+    height: 100%;
 }
