--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #05386b;
 }
 
 body {
@@ -20,6 +21,16 @@ header {
     height: 20%;
 }
 
+header h1 {
+    color: #05386b;
+    padding-bottom: 0;
+}
+
+header hr {
+    width: 100%;
+    border: 2px solid #379683;
+}
+
 #weapons-container {
     display: flex;
     justify-content: center;
@@ -28,10 +39,14 @@ header {
 }
 
 .weapon {
+    font-weight: bold;
+    color: #EDF5E1;
     width: 130px;
     height: 50px;
     border-radius: 30px;
     cursor: pointer;
+    font-size: 18px;
+    background-color: #379683;
 }
 
 #scores-container {
@@ -86,9 +101,20 @@ header {
     padding: 5px 20px;
     font-size: 20px;
     cursor: pointer;
+    background-color: #379683;
+    color: #EDF5E1;
 }
 
 #player-image, #computer-image {
     width: 100%;
     height: 100%;
+    border-radius: 20px;
+}
+
+.image-container {
+    border-radius: 20px;
+}
+
+#player-score, #computer-score {
+    color: black;
 }
